<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SGC</string>
    <string name="action_settings_label">Settings</string>
    <string name="title_home_tab">Home</string>
    <string name="title_su_map_tab">SU Map</string>
    <string name="title_course_map_tab">Course Map</string>
    <string name="sponser_button_label">Sponsors</string>
    <string name="vendor_button_label">Vendors</string>
    <string name="twitter_button_label">Twitter</string>
    <string name="facebook_button_label">Facebook</string>
    <string name="sgc_website_button_label">Sea Gull Century Website</string>    
    <string name="route1_button_label">Assateague Century (100 Miles)</string>    
    <string name="route3_button_label">Princess Anne Metric (62 Miles)</string>
    <string name="route2_button_label">Snow Hill Century (100 Miles)</string>
	<!-- <string name="route1_button_label">Route 1</string>
    <string name="route2_button_label">Route 2</string>
    <string name="route3_button_label">Route 3</string> 	
    <string name="category_group">route 3</string> 	-->
    <string name="facebook_label">Facebook</string> 	
    <string name="twitter_label">Twitter</string> 
    <string name="sagWagon_label">SAG Wagon</string> 	
    <string name="speed_settings_label">Current Speed</string>
     <string name="waypoints_settings_label">Waypoints</string>
</resources>
