<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_frame"
    android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:context=".MainActivity$HomeFragment" 
        android:background="#f8c55a"
        android:layout_alignParentBottom="true" >

    <Button
        android:id="@+id/sgc_website_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@android:drawable/btn_default"
        android:text="@string/sgc_website_button_label" />

    <Button
        android:id="@+id/route2_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sgc_website_button"
        android:layout_alignParentLeft="true"
        android:background="@android:drawable/btn_default"
        android:text="@string/route2_button_label" />

    <Button
        android:id="@+id/route3_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/route2_button"
        android:layout_alignParentLeft="true"
        android:background="@android:drawable/btn_default"
        android:text="@string/route3_button_label" />

    <Button
        android:id="@+id/route1_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/route3_button"
        android:layout_alignParentLeft="true"
        android:background="@android:drawable/btn_default"
        android:text="@string/route1_button_label" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/route1_button"
        android:src="@drawable/sgclogo1000x1000" />

</RelativeLayout>
